# graph

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: cgride-graph-config.cmake.in
include/cgride/: graph.hpp
include/cgride/graph/: graph.hpp  task.hpp  task_id.hpp  task_kind.hpp  topology.hpp  version.hpp
src/: graph.cpp  task.cpp  task_id.cpp  topology.cpp
tests/: CMakeLists.txt  graph_test.cpp  task_id_test.cpp  task_test.cpp  topology_test.cpp
